--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.7.RELEASE</version>
+        <groupId>com.github.astronomvm</groupId>
+        <artifactId>parent</artifactId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -70,6 +70,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
+            <version>1.5.7.RELEASE</version>
             <optional>true</optional>
         </dependency>
 
@@ -82,16 +83,18 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <version>1.5.7.RELEASE</version>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <version>1.5.7.RELEASE</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
-            <groupId>AstronomVM</groupId>
+            <groupId>com.github.astronomvm</groupId>
             <artifactId>AstronomKernel</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
@@ -119,54 +122,55 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
+            <version>1.5.7.RELEASE</version>
         </dependency>
 
         <!-- Components -->
 
         <dependency>
-            <groupId>AstronomVM</groupId>
+            <groupId>com.github.astronomvm</groupId>
             <artifactId>CSVFileLoaderComponent</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
-            <groupId>AstronomVM</groupId>
+            <groupId>com.github.astronomvm</groupId>
             <artifactId>TextFileOutputComponent</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
-            <groupId>AstronomVM</groupId>
+            <groupId>com.github.astronomvm</groupId>
             <artifactId>RowFilterComponent</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
-            <groupId>AstronomVM</groupId>
+            <groupId>com.github.astronomvm</groupId>
             <artifactId>FunctionalModelMapperComponent</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
-            <groupId>AstronomVM</groupId>
+            <groupId>com.github.astronomvm</groupId>
             <artifactId>SQLExecutorComponent</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
-            <groupId>AstronomVM</groupId>
+            <groupId>com.github.astronomvm</groupId>
             <artifactId>RestConsumerComponent</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
-            <groupId>AstronomVM</groupId>
+            <groupId>com.github.astronomvm</groupId>
             <artifactId>JsonPathSelectorComponent</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
-            <groupId>AstronomVM</groupId>
+            <groupId>com.github.astronomvm</groupId>
             <artifactId>JsonToModelComponent</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
